--- a/wincmd.ini
+++ b/wincmd.ini
@@ -2,10 +2,10 @@
 InstallDir=C:\Program Files\totalcmd
 UseNewDefFont=1
 SetEncoding=漩.do.not.remove
-firstmnu=2810
+firstmnu=2298
 FirstTime=0
 FirstTimeIconLib=0
-test=156
+test=237
 LanguageIni=WCMD_CHN.LNG
 Mainmenu=WCMD_CHN.mnu
 DarkMode=2
@@ -56,6 +56,10 @@ LogKeepCount=30
 ExplorerForCopy=0
 Win95Delete=0
 UseTrash=1
+UseRubberBandSelection=1
+AltSearch=3
+QuickSearchMatchBeginning=0
+QuickSearchExactMatch=0
 [ButtonbarCache]
 IconDll_default.bar=
 IconDll_vertical.bar=
@@ -75,36 +79,36 @@ dy=980
 Divider=500
 DividerQuickView=500
 DividerComments=500
-Tabstops=237,241,303,178,688,90
+Tabstops=227,231,293,168,688,90
 monitor(0,0,1920,1080;120)=233,50,1375,980
 [Tabstops]
-0=237
-1=241
-3=303
-4=178
+0=227
+1=231
+3=293
+4=168
 6=688
 5=90
 AdjustWidth=1
 [left]
-path=C:\Users\
-ViewMode=10001
+path=C:\Users\Must77\MusicVideo\
+ViewMode=0
 activepanelcolor=-1
 activepanelcolor2=-1
 activepanelcolordark=-1
 activepanelcolordark2=-1
-ShowAllDetails=0
+ShowAllDetails=1
 SpecialView=0
 show=1
 sortorder=0
-negative Sortorder=0
+negative Sortorder=1
 [right]
-path=c:\
+path=C:\Users\Must77\OneDrive\大学\
 ViewMode=10001
 activepanelcolor=-1
 activepanelcolor2=-1
 activepanelcolordark=-1
 activepanelcolordark2=-1
-ShowAllDetails=0
+ShowAllDetails=1
 SpecialView=0
 show=1
 sortorder=0
