Simplify status-right in .tmux.conf
Added a simplified status-right format to the tmux configuration. Increase robustness

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,3 +5,7 @@ bind C-a send-prefix
 
 # improve colors
 set -g default-terminal 'screen-256color'
+
+# simplify status-right
+set -g status-right '%H:%M %d-%b-%y'
+set -g status-right-length 20
